swag updates commited
